Created Version 1 for my Project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Technologies Project - Alisha Chawla</title>
-  </head>
-  <body>
+    <head>
+        <title>Babson Financial Literacy Project</title>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
+
+    </head>
+    <body>
+        <div id="main">
+            <a href="index.html" id="logo"><img src="images/BabsonFinancialLogo.png" alt="Babson Financial Logo"></a>
+            <img id="plants" src="images/financial-square.jpg" alt="Plants image">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="students.html">Students</a></li>
+                    <li><a href="schools.html">Schools</a></li>
+                    <li><a href="curriculum.html">Curriculum</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="sitemap.html">Site Map</a></li>
+                </ul>
+            </nav>
+            <div id="container">
+                <div id="content">
+                    <p><img src="images/empty_class_640.jpg" alt="class" class="left">Welcome to the Babson Financial Literacy Project's official website, we are so happy you are here. The Babson Financial Literacy Project is part of Babson's Finance Association. Our mission is to bridge the gap in financial literacy.
+                    </p><p>We hope to do this by conducting financial literacy workshops to individuals in socioeconomically disadvantaged communities in the Greater Boston area. Additionally, we hope to conduct these workshops at colleges which Babson has a collaboration with.</p>
+
+                    <p>We anticipate to conduct these workshops at Olin and Wellesely College as these are the colleges we are in contact with. Babson College, being a top tier, all business school, has amazing resources which their students are equipt with.<img src="images/full_class_640.jpg" alt="class" class="right"> Babson students will apply to this program and then have to undergo several trainings conducted by Professors within the Finance Department. Additonally, they will recieve a formal online training hosted by a local community college. Once these students have become certified Babson Financial Wellness Trainers, they will be on their journey to conducting these workshops at other colleges, nonprofit organizations, and schools within the greater Boston area.</p>
+
+<p>We focus on teaching several different topics and have created a well rounded curriculum with a lot of support from the faculty at Babson. For more information, please refer to the curriculum tab of this website. We hope that any student who attends our workshop will be more educated about how to manage their money better and have a better understanding on how to be more independent in making financial decisions.<img src="images/piggy-bank_640.jpg" class="right" alt="piggy bank"><blockquote>"An investment in knowledge pays the best interest"</blockquote> A quote by Benjamin Franklin,"An investment in knowledge pays the best interest." We hope to implement this quote in the students who attend our workshops as it is important that they knowledge is power and knowledge within financial literacy will serve them well in the future. Additionally, we hope that those who are from socioeconomically disadvantaged communities will attend our workshops as we are providing resources and knowledge they may not have had the access to before.</p>
+
+<p> We hope that this website has helpful resources, contact information, and ways to keep in touch with our team. Please make sure to sign up for our weekly newspaper to be up to date with upcoming events and highlights from past events. We want to thank you for visiting our website and joining this family. The team is very passionate about bridging the financial litercy gap and hope to continue spreading awareness to this issue.</p>
+                </div>
+                <div id="right_bar">
+                    <div id="newsletter_box">
+                        <h3>Newsletter</h3>
+                        Sign up for our weekly newsletter
+                        <form method="post" action="https://oim-apis.herokuapp.com/">
+                            <input name="email" id="email" placeholder="email address">
+                            <label></label><input type="submit" name="signup">
+                        </form>
+                    </div>
+                    <div id="social_box">
+                        <h3>Social media</h3>
+                        <div>
+                            <a href="https://www.instagram.com/babsonfwp/" alt="Instagram"><img src="images/Instagram.png"></a>
+                            <a href="https://www.linkedin.com/company/babsonfinassoc/mycompany/"><img src="images/LinkedIn.png" alt="Linkedin"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="clear"></div>
+
+            <footer>&copy; 2022 Babson Financial Literacy Project</footer>
+        </div>
+    </body>
+</html>
