Final Project Created and also Created Bootstrap version for mobile compatibility

--- a/curriculum.html
+++ b/curriculum.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/styles.css">
         <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
+        <script src="js/main.js" defer></script>
     </head>
     <body>
         <div id="main">
@@ -28,6 +29,13 @@
                         <caption id="curriculum_heading">
                             Curriculum Breakdown 
                         </caption>
+                    <thead>
+                        <tr>
+                            <th>Course</th>
+                            <th>Description</th>
+                            <th>Learning Tools</th>
+                        </tr>
+                    </thead>
                     <tbody>
                         <tr>
                             <td id="curriculum_title">Managing Credit</td>
@@ -62,23 +70,23 @@
                     </tbody>
                     </table>
                 </div>
-                    <div id="right_bar">
-                        <div id="newsletter_box">
-                            <h3>Newsletter</h3>
-                            Sign up for our weekly newsletter
-                            <form method="post" action="https://oim-apis.herokuapp.com/">
-                                <input name="email" id="email" placeholder="email address">
-                                <label></label><input type="submit" name="signup">
-                            </form>
-                        </div>
-                        <div id="social_box">
-                            <h3>Social media</h3>
-                            <div>
-                                <a href="https://www.instagram.com/babsonfwp/" alt="Instagram"><img src="images/Instagram.png"></a>
-                                <a href="https://www.linkedin.com/company/babsonfinassoc/mycompany/"><img src="images/LinkedIn.png" alt="Linkedin"></a>
-                            </div>
+                <div id="right_bar">
+                    <div id="newsletter_box">
+                        <h3>Newsletter</h3>
+                        Sign up for our weekly newsletter
+                        <form method="post" action="https://oim-apis.herokuapp.com/">
+                            <input name="email" id="email" placeholder="email address">
+                            <label></label><input type="submit" name="signup">
+                        </form>
+                    </div>
+                    <div id="social_box">
+                        <h3>Social media</h3>
+                        <div>
+                            <a href="https://www.instagram.com/babsonfwp/" alt="Instagram"><img src="images/Instagram.png"></a>
+                            <a href="https://www.linkedin.com/company/babsonfinassoc/mycompany/"><img src="images/LinkedIn.png" alt="Linkedin"></a>
                         </div>
                     </div>
+                </div>
                   
          <!--   </div>-->
             <div class="clear"></div>
