--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/styles.css">
         <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
+        <script src="js/contact.js" defer></script>
     </head>
     <body>
         <div id="main">
@@ -32,7 +33,9 @@
               <!--  </div> -->
                         <form id="contact_form" action="https://oim-apis.herokuapp.com/form2" method="post">
                             <label for="name"> Name: </label>
-                            <input type="name" placeholder="Name" id="pw" />
+                            <input type="name" placeholder="Name" id="name" class="required" />
+                           <br> <label for="email"> Email: </label>
+                            <input type="email" placeholder="Email" id="email" class="required" />
                             <br/>
                             <br/>
                             <div> 
@@ -63,7 +66,7 @@
                                 rows="5"
                                 cols="25"
                                 ></textarea>
-                                    <br><label></label><input type="submit" name="signup">
+                                    <br><label></label><button type="submit" name="submit" id="form_submit">submit</button>
                             </div>
                         </form>
                 </div>
