--- a/sitemap.html
+++ b/sitemap.html
@@ -39,6 +39,23 @@
                         </p>
                 </div>
             </div>
+            <div id="right_bar">
+                <div id="newsletter_box">
+                    <h3>Newsletter</h3>
+                    Sign up for our weekly newsletter
+                    <form method="post" action="https://oim-apis.herokuapp.com/">
+                        <input name="email" id="email" placeholder="email address">
+                        <label></label><input type="submit" name="signup">
+                    </form>
+                </div>
+                <div id="social_box">
+                    <h3>Social media</h3>
+                    <div>
+                        <a href="https://www.instagram.com/babsonfwp/" alt="Instagram"><img src="images/Instagram.png"></a>
+                        <a href="https://www.linkedin.com/company/babsonfinassoc/mycompany/"><img src="images/LinkedIn.png" alt="Linkedin"></a>
+                    </div>
+                </div>
+            </div>
             <div class="clear"></div>
 
             <footer>&copy; 2022 Babson Financial Literacy Project</footer>
